--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "build": "npm i"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Vikram Markali",
